--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,17 @@
     {
       "src": "src/server.ts",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/(admin\\.html|widget\\.js|preview\\.html|diagnostic\\.html|setup\\.html)",
+      "dest": "/public/$1"
+    },
     {
       "src": "/static/(.*)",
       "dest": "/public/$1"
